[WIP] New mapping approach - Reduces Java source level to 8 everywhere to eliminate JavaDoc warnings related to generated code - Moves some in-line JSONs to class path resources to make tests more clean - Adds assumptions to skip integration tests if API key is not set - Adds assumptions to skip One Call API tests unless RUN_ONE_CALL env var is set
TODO:
- Add new/refactor unit tests
- Validate API using official examples
- Add Javadoc
- Review interfaces if necessary

Signed-off-by: Esta Nagy <nagyesta@gmail.com>