@@ -32,7 +32,7 @@ import org.junit.jupiter.api.Test;
 import java.math.BigDecimal;
 import java.time.OffsetDateTime;
 import java.time.ZoneOffset;
-import java.util.List;
+import java.util.Collections;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
@@ -50,7 +50,7 @@ public class HourlyUnitTest {
     public void getWeatherState() {
         final Hourly hourly = new Hourly();
         final WeatherCondition weatherState = WeatherCondition.getById(800);
-        hourly.setWeatherStates(List.of(weatherState));
+        hourly.setWeatherStates(Collections.singletonList(weatherState));
 
         assertEquals(weatherState, hourly.getWeatherStates().get(0));
     }
